fixed some layout issues

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 ul {
   list-style: none;
-  display: flex;
-  justify-content: center;
-  margin: 1em;
+  line-height: 2.7em;
+  margin: .6em;
 }
 
 a:link {
@@ -28,6 +27,7 @@ a:visited {
   justify-content: center;
   font-family: Garamond;
   color: #3d2e15;
+  font-size: 40px;
 }
 
 .nav
@@ -58,8 +58,7 @@ a:visited {
 }
 
 .col2 {
-  width: 25%;
-  line-height: 3em;
+  width: 27%;
   background-color: #f9b77c;
   color: #3d2e15;
   font-family: helvetica;
@@ -76,7 +75,7 @@ a:visited {
 .footer
 {
   clear: both;
-  padding: 1em 2em;
+  padding: .5em .9em;
   color: #f9b77c;
   background-color: #3d2e15;
 }
@@ -111,3 +110,15 @@ a:visited {
 .sales-col3 {
   width: 20%;
  }
+
+/*style for merchandise page*/
+
+.tshirt {
+  display: flex;
+  justify-content: center;
+  margin: 1em;
+  font-style: italic;
+  font-weight: bold;
+  color: #3d2e15;
+  font-size: 50px;
+}
